<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/dp_24">

    <TextView
        android:id="@+id/btn_create_template"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:padding="@dimen/dp_12"
        android:text="@string/create_template"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/btn_free_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_24"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:padding="@dimen/dp_12"
        android:text="@string/create_free_item"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/btn_start_voice_recognition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_16"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:padding="@dimen/dp_12"
        android:text="@string/start"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/btn_import_voice_recognition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_16"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:padding="@dimen/dp_12"
        android:text="@string/import_msg"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="@dimen/dp_16"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        android:src="@drawable/store_image" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_16"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:padding="@dimen/dp_12"
        android:text="@string/powered_by_msg"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_16"
        android:gravity="center"
        android:text="@string/copy_write_msg"
        android:textColor="@color/black"
        android:textSize="12sp" />
</LinearLayout>